--- a/main.tex
+++ b/main.tex
@@ -81,18 +81,16 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\LARGE Pushp Vashisht}} & Email: \href{mailto:pushp.vashisht@hotmail.com}{pushp.vashisht@hotmail.com}~~~~~\\
-  Portfolio: \href{https://pushp.ovh}{pushp.ovh} & Mobile: \href{tel:+3530894890290}{(+353) 0894-890-290}~~~~~~~~~~~~~~~~ \\
-  Github:~~ \href{https://github.com/pushp1997}{github.com/pushp1997} & LinkedIn: \href{https://www.linkedin.com/in/pushp-vashisht}{linkedin.com/in/pushp-vashisht} \\
+  \textbf{{\LARGE AASHNA}} & Email: \href{mailto:saashna@gmail.com}{saashna@gmail.com}~~~~~\\
+  Mobile: \href{tel:+3530892117502}{(+353) 089-211-7502}~~~~~~~~~~~~~~~~ \\
+  Github:~~ \href{https://github.com/aashna09}{github.com/aashna09} & LinkedIn: \href{https://www.linkedin.com/in/aashna-singh-a7148511a/}{linkedin.com/in/aashna-singh-a7148511a} \\
 \end{tabular*}
 
 %-----------SKILLS-----------------
 \section{Skills Summary}
 \resumeSubHeadingListStart
-\resumeSubItem{Languages}{~~~~~~Python 3, JavaScript, SQL, Bash}
-\resumeSubItem{Frameworks}{~~~~Fast API, Django, Flask, Selenium, NodeJS}
-\resumeSubItem{Tools}{~~~~~~~~~~~~~~Kubernetes (Rancher / EKS), Docker, GIT, Redis, RabbitMQ, MongoDB, PostgreSQL, MySQL, SQLite, Kibana, FluentD, Elastic Search}
-\resumeSubItem{Platforms}{~~~~~~~AWS, Jira, Github, Gitlab}
+\resumeSubItem{Languages}{~~~~~~Python, SQL, Shell Scripting}
+\resumeSubItem{Tools}{~~~~~~~~~~~~~~Informatica Powercenter, SSIS, SSRS, MySQL, Oracle DB}
 \resumeSubItem{Soft Skills}{~~~~~~~Leadership, Technical Writing, Adaptibility}
 \resumeSubHeadingListEnd
 \vspace{-5pt}
@@ -101,35 +99,40 @@
 \section{Work Experience}
 \resumeSubHeadingListStart
 \resumeSubheading
-{Adcuratio Media Inc}{Bangalore, India}
-{Module Lead I}{Apr 2021 - Jun 2022}
+{Accenture Pvt Ltd.}{Bangalore, India}
+{Data Engineering Analyst}{May 2022 - July 2023}
 \resumeItemListStart
-\resumeItemWithoutTitle{Led and mentored a team of 4 developers using Agile Scrum methodologies, including task analysis, breakdown, monitoring, and code evaluation.}
-\resumeItemWithoutTitle{Took ownership of a product module and managed the development process to meet business requirements to ensure on time release.}
-\resumeItemWithoutTitle{Designed and developed the e-commerce module for Folksmedia, including requirement analysis, system architecture, DB schema, and API pipeline design. Led the successful integration and performance of the module within the overall application.}
-\resumeItemWithoutTitle{Developed a full-text search engine with auto-suggestions from scratch, with the ability to search through all products data in approximately 10ms.}
-\resumeItem{Roles}{Architecture Design, Backend Development, Requirements Gathering, Task Assigning.}
-\resumeItem{Skills Acquired / Utilised}{Python, FastAPI, Docker, Redis, MongoDB.}
+\resumeItemWithoutTitle{Played a pivotal role as an ETL Informatica Developer for the esteemed client, Liberty Mutual.}
+\resumeItemWithoutTitle{Extensively used Informatica ETL methodology for supporting Data extraction, Transformation and loading process, in a corporate-wide-ETL Solution using Informatica PowerCenter}
+\resumeItemWithoutTitle{Achieved a significant reduction in ETL job runtime from 7-8 hours to 8 minutes through Unix script optimization and workflow tuning.}
+\resumeItemWithoutTitle{Diligently addressed and resolved incidents by debugging mapping codes, ensuring smooth data flow and minimizing disruptions.}
+\resumeItemWithoutTitle{Led the deployment process across various environments, starting from development, testing, staging, and culminating in production. Rigorously tested at each stage to ensure data integrity and system stability.}
+\resumeItemWithoutTitle{Collaborated closely with the Database and DevOps teams to streamline deployments and enhance system performance.}
+\resumeItem{Roles}{ETL Developer, 24X7 Production Support, Requirements Gathering.}
+\resumeItem{Skills Acquired / Utilised}{Informatica Powercenter, SQL databses, ESP Scheduler, Unix, Agile Software Development.}
 \resumeItemListEnd
 \vspace{2pt}
 \resumeSubheading
-{Adcuratio Media Inc}{Bangalore, India}
-{Software Developer}{Apr 2020 - Mar 2021}
+{Infosys Pvt Ltd.}{Bangalore, India}
+{Senior Systems Engineer}{October 2019 - May 2022}
 \resumeItemListStart
-\resumeItemWithoutTitle{Designed and Developed an Ad server from scratch that creates instructions based on the demographic data. These instructions are polled and parsed by televisions to replace an advertisement in real-time with a targeted advertisement. The application is developed with distributed (Kubernetes) architecture in mind and is serving more than 3 million TVs daily in production.}
-\resumeItemWithoutTitle{Implemented a graphical dashboard using Kibana to track user impressions through logs data aggregated by FluentD.}
-\resumeItemWithoutTitle{Awarded as Best performer employee of the quarter and got promoted skipping multiple ranks within short duration.}
-\resumeItem{Roles}{Application Architecture Design, Kubernetes Application development, Cluster Monitoring.}
-\resumeItem{Skills Acquired / Utilised}{Python, FastAPI, Rancher (On-Premises k8s cluster provisioning), EKS, Docker, Redis, MongoDB, FluentD, Kibana.}
+\resumeItemWithoutTitle{Developed bidirectional ECM to SF mappings using Informatica Intelligent Cloud Services.}
+\resumeItemWithoutTitle{Addressed and resolved incidents efficiently by delving deep into mapping codes, ensuring continuous data flow and system reliability.}
+\resumeItemWithoutTitle{Held full accountability for launching new Point Of Sale (POS) stores for Tiffany & Co., overseeing everything from database configurations to establishing end-to-end data pipelines, thereby ensuring smooth data integration across the newly inaugurated locations.}
+\resumeItemWithoutTitle{Collaborated with cross-functional teams to ensure the successful launch and integration of new POS systems.}
+\resumeItemWithoutTitle{Played a pivotal role in continuous enhancements and code migration.}
+\resumeItem{Roles}{ETL Developer, Production Support Engineer, Jobs & Prodcution Monitoring.}
+\resumeItem{Skills Acquired / Utilised}{Informatica Powercenter, Control-M, Unix, MySQL.}
 \resumeItemListEnd
 \vspace{2pt}
 \resumeSubheading
-{Infosys Limited}{Bangalore, India}
-{Systems Engineer}{Aug 2019 - Apr 2020}
+{Infosys Limited}{Mysuru, India}
+{Systems Engineer Trainee}{February 2019 - May 2019}
 \resumeItemListStart
-\resumeItemWithoutTitle{Worked at the backend of the Infosys Migration Platform, to automate the extraction of business rules from a legacy application code and migration of the legacy application to the latest / desired technologies and worked at the frontend, to create a web user interface to facilitate interaction with the platform.}
-\resumeItem{Roles}{Feature Design \& Development, Backend Developer.}
-\resumeItem{Skills Acquired / Utilised}{Nodejs, ANTLR, Agile Software Development.}
+\resumeItemWithoutTitle{Completed an internship focused on Business Intelligence and Python programming.}
+\resumeItemWithoutTitle{Developed a Taxi Booking System using SSIS and SSRS.}
+\resumeItem{Roles}{Project Trainee, Backend Developer.}
+\resumeItem{Skills Acquired / Utilised}{Python, SSIS, SSRS, Agile Software Development.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 \vspace{-5pt}
@@ -139,11 +142,11 @@
 \resumeSubHeadingListStart
 \resumeSubheading
 {University College Cork}{Cork, Ireland}
-{MSc - Computing Science}{2022 - Ongoing}
+{MSc - Computing Science}{2023 - Ongoing}
 \vspace{2pt}
 \resumeSubheading
-{Sikkim Manipal Institute of Technology}{Sikkim, India}
-{Bachelor of Technology - Computer Science \& Engineering;  GPA: 7.04}{2015 - 2019}
+{Maharishi Markandeshwar University}{Ambala, India}
+{Bachelor of Technology - Computer Science \& Engineering;  GPA: 7.45}{2015 - 2019}
 \resumeSubHeadingListEnd
 \vspace{-5pt}
 
@@ -153,8 +156,9 @@
 \resumeSubheading{Prayas Foundation}{Renukoot, India}
 {Web Developer (Part-time)}{Aug 2019 - Apr 2020}
 \resumeItemListStart
-\resumeItemWithoutTitle{Developed the website (https://prayasfoundation.org.in), where the user can register to become a donor or request for blood.}
-\resumeItemWithoutTitle{My work on this project involved designing and coding the website, as well as testing and debugging to ensure its functionality.}
+\resumeItemWithoutTitle{Developed the website (https://prayasfoundation.org.in), where the user can register to become a donor or request for blood. My work on this project involved designing and coding the website, as well as testing and debugging to ensure its
+functionality.}
+\resumeItemWithoutTitle{Volunteered at Lion's Club, organizing camps and supporting during Covid.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
