--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@
 %-----------SKILLS-----------------
 \section{Skills Summary}
 \resumeSubHeadingListStart
-\resumeSubItem{Languages}{~~~~~~Python, SQL, Shell Scripting}
+\resumeSubItem{Languages}{~~~~~~Python, SQL, Bash Scripting}
 \resumeSubItem{Tools}{~~~~~~~~~~~~~~Informatica Powercenter, SSIS, SSRS, MySQL, Oracle DB}
 \resumeSubItem{Soft Skills}{~~~~~~~Leadership, Technical Writing, Adaptibility}
 \resumeSubHeadingListEnd
