--- a/main.tex
+++ b/main.tex
@@ -118,10 +118,10 @@
 \resumeItemListStart
 \resumeItemWithoutTitle{Developed bidirectional ECM to SF mappings using Informatica Intelligent Cloud Services.}
 \resumeItemWithoutTitle{Addressed and resolved incidents efficiently by delving deep into mapping codes, ensuring continuous data flow and system reliability.}
-\resumeItemWithoutTitle{Held full accountability for launching new Point Of Sale (POS) stores for Tiffany & Co., overseeing everything from database configurations to establishing end-to-end data pipelines, thereby ensuring smooth data integration across the newly inaugurated locations.}
+\resumeItemWithoutTitle{Held full accountability for launching new Point Of Sale (POS) stores for client, Tiffany \& Co., overseeing everything from database configurations to establishing end-to-end data pipelines, thereby ensuring smooth data integration across the newly inaugurated locations.}
 \resumeItemWithoutTitle{Collaborated with cross-functional teams to ensure the successful launch and integration of new POS systems.}
 \resumeItemWithoutTitle{Played a pivotal role in continuous enhancements and code migration.}
-\resumeItem{Roles}{ETL Developer, Production Support Engineer, Jobs & Prodcution Monitoring.}
+\resumeItem{Roles}{ETL Developer, Production Support Engineer, Jobs \& Prodcution Monitoring.}
 \resumeItem{Skills Acquired / Utilised}{Informatica Powercenter, Control-M, Unix, MySQL.}
 \resumeItemListEnd
 \vspace{2pt}
